--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -98,8 +98,9 @@ window.open(uri);
     </div>
   </div>
 </div>
-<form name="frm" action="/detail" method="post" target="dtlWin">
+<form name="frm" action="/detail" method="post">
   <input type="hidden" name="rurl" value="" />
+  <input type="hidden" name="title" id="title" value="" />
   <input type="hidden" name="titleId" id="titleId" value="" />
   <input type="hidden" name="no" id="no" value="" />
   <input type="hidden" name="weekday" id="weekday" value="" />
