--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -98,7 +98,7 @@ window.open(uri);
     </div>
   </div>
 </div>
-<form name="frm" action="/detail" method="post">
+<form name="frm" method="post">
   <input type="hidden" name="rurl" value="" />
   <input type="hidden" name="title" id="title" value="" />
   <input type="hidden" name="titleId" id="titleId" value="" />
